--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
   <a href="{{ site.url }}/">
-    <img src="{{ site.baseurl }}/assets/img/logo.png" alt="Logo" class="logo">
+    <img src="{{ site.url }}/assets/img/logo.png" alt="Logo" class="logo">
   </a>
   <nav>
     <ul>
