--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,10 @@
-<header>
-  <a href="{{ site.url }}/">
+<header class="site-header">
+  <a href="{{ "/" | relative_url }}">
     <img src="{{ site.url }}/assets/img/logo.png" alt="Logo" class="logo" style="height:100px;">
   </a>
-  <nav>
-    <ul>
-      <li><a href="{{ site.baseurl }}/">Home</a></li>
-      <li><a href="{{ site.baseurl }}/syllabus">Syllabus</a></li>
-    </ul>
+  <nav class="nav">
+    {% assign here = page.url | default: '/' %}
+    <a href="{{ '/' | relative_url }}" class="{% if here == '/' %}active{% endif %}">Home</a>
+    <a href="{{ '/mechanics/syllabus/' | relative_url }}" class="{% if here contains '/mechanics/syllabus' %}active{% endif %}">syllabus</a>
   </nav>
 </header>
-
