--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="Ma4belwJJ0LjtEuiFByY7ZFnopwb3-9TKb4D99ZnXOE" />
   <title>{{ page.title }} | {{ site.title }}</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ site.url }}/assets/style.css">
 </head>
 <body>
@@ -13,3 +16,4 @@
   {% include footer.html %}
 </body>
 </html>
+
