--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,12 @@
 ---
 layout: default
 ---
-<article class="page">
-  <h1>{{ page.title }}</h1>
-  {{ content }}
-</article>
+<section class="page">
+  {% if page.title %}
+    <h1 class="page-title">{{ page.title }}</h1>
+    {% if page.subtitle %}<p class="page-subtitle">{{ page.subtitle }}</p>{% endif %}
+  {% endif %}
+  <div class="page-body">
+    {{ content }}
+  </div>
+</section>
