--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,12 @@
 ---
 layout: default
 ---
+
 <article class="post">
-  <h1>{{ page.title }}</h1>
-  <p class="date">{{ page.date | date: "%B %d, %Y" }}</p>
-  {{ content }}
+  <div class="post-body">
+    <header class="post-header">
+      <h1 class="post-title">{{ page.title }}</h1>
+    </header>
+    {{ content }}
+  </div>
 </article>
